[gd_scene load_steps=6 format=3 uid="uid://d4jlhqocvwakd"]

[ext_resource type="Script" path="res://UI/GameUI/InventorySlot.gd" id="1_tj16l"]

[sub_resource type="Gradient" id="Gradient_xseq3"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.282353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wbmrs"]
gradient = SubResource("Gradient_xseq3")
width = 50
height = 50

[sub_resource type="LabelSettings" id="LabelSettings_08e05"]
font_size = 11
outline_size = 4
outline_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oopjy"]
line_spacing = 0.0
font_size = 10
outline_size = 4
outline_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_tj16l")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 50.0
offset_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_wbmrs")

[node name="ItemTexture" type="TextureRect" parent="CenterContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemAmount" type="Label" parent="."]
layout_mode = 2
offset_right = 50.0
offset_bottom = 15.0
text = "x5230
"
label_settings = SubResource("LabelSettings_08e05")
horizontal_alignment = 2

[node name="ItemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 49.0
offset_right = 56.0
offset_bottom = 77.0
grow_horizontal = 2
pivot_offset = Vector2(49, 7)
text = "Golden coin and super gold stuff"
label_settings = SubResource("LabelSettings_oopjy")
horizontal_alignment = 1
autowrap_mode = 2
